# rules_idea

./: .bazelrc  .gitattributes  .gitignore
examples/test/: .bazelrc  BUILD.bazel  WORKSPACE  run_indexing.sh
gradleproject/: build.gradle.kts
intellij/: deps_repositories.bzl  indexing.bzl  intellij.bzl  predefined.bzl  repositories.bzl  run.bzl
intellij/internal/intellij_defs/: intellij_defs.bzl  intellij_indexing.bzl  intellij_kt_toolchain.bzl
intellij/internal/intellij_repo/: intellij_repo.bzl  intellij_repo_libs.bzl
intellij/internal/intellij_toolchain/: plugins_directory.bzl
intellij/internal/misc/: run_intellij.sh.tp
src/main/kotlin/rules_intellij/indexing/: IndexingService.kt  OnDiskSharedIndexChunkLocator.kt  PersistentProjectIndexesGenerator.kt
src/main/kotlin/rules_intellij/worker/: BUILD.bazel  IntellijIndexingClient.kt
